--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">P3B_TUBES</string>
+    <string name="open_drawer">Open Drawer</string>
+    <string name="close_drawer">Close Drawer</string>
+    <string name="home">Home</string>
+    <string name="appointment">Appointment</string>
+    <string name="doctor">Doctor</string>
+    <string name="exit">Exit</string>
 </resources>
