--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="btn_onboarding_buat_pertemuan">Buat Pertemuan</string>
     <string name="tv_fragment_doctor_title">Daftar Dokter</string>
     <string name="tv_fragment_appointment_title">My Appointment</string>
+    <string name="nama">Nama</string>
+    <string name="spesialis">Spesialis</string>
+    <string name="btn_add_doctor">Add Doctor</string>
 </resources>
