--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="btn_onboarding_buat_pertemuan">Buat Pertemuan</string>
     <string name="tv_fragment_doctor_title">Daftar Dokter</string>
     <string name="tv_fragment_appointment_title">My Appointment</string>
-    <string name="nama">Nama</string>
+    <string name="name">Name</string>
     <string name="spesialis">Spesialis</string>
     <string name="btn_add_doctor">Add Doctor</string>
     <string name="doctor_add_fragment">Doctor Add Fragment</string>
@@ -23,4 +23,5 @@
     <string name="issues">Issues</string>
     <string name="issues_desc">Brief description of your issues</string>
     <string name="patient_issues">Patient Issues</string>
+    <string name="add_doctor">Add Doctor</string>
 </resources>
