--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="stripe">-</string>
     <string name="tanggal">1 January 2022</string>
     <string name="jam">23:00</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="doctor_list">Doctor List</string>
+    <string name="appointment_list">Appointment List</string>
 </resources>
