AddAppointment and AddDoctor UI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="name">Name</string>
     <string name="spesialis">Spesialis</string>
     <string name="btn_add_doctor">Add</string>
-    <string name="doctor_add_fragment">Doctor Add Fragment</string>
+    <string name="doctor_add_fragment">Add Doctor</string>
     <string name="patient_name">Patient Name</string>
     <string name="issues">Issues</string>
     <string name="issues_desc">Brief description of your issues</string>
