--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="contact">Contact</string>
     <string name="appointment_list">Appointment</string>
     <string name="doctor_list">Doctor</string>
+    <string name="patient_phone">Patient Phone</string>
 </resources>
