App icon, padding/margin fix

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="specialty">Specialty</string>
     <string name="date">Date</string>
     <string name="time">Time</string>
-    <string name="add_appointment">Add Appointment</string>
+    <string name="add_appointment">Add</string>
     <string name="tv_onboarding_title">RS Cepat Kembali</string>
     <string name="tv_onboarding_subtitle">Menjaga kesehatanmu semakin mudah dengan aplikasi RS Cepat Kembali</string>
     <string name="btn_onboarding_buat_pertemuan">Buat Pertemuan</string>
