--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,11 +12,11 @@
     <string name="add_appointment">Add</string>
     <string name="tv_onboarding_title">RS Cepat Kembali</string>
     <string name="tv_onboarding_subtitle">Menjaga kesehatanmu semakin mudah dengan aplikasi RS Cepat Kembali</string>
-    <string name="btn_onboarding_buat_pertemuan">Buat Pertemuan</string>
-    <string name="tv_fragment_doctor_title">Daftar Dokter</string>
+    <string name="btn_onboarding_buat_pertemuan">Make an Appointment</string>
+    <string name="tv_fragment_doctor_title">Doctor List</string>
     <string name="tv_fragment_appointment_title">My Appointment</string>
     <string name="name">Name</string>
-    <string name="spesialis">Spesialis</string>
+    <string name="spesialis">Specialty</string>
     <string name="btn_add_doctor">Add</string>
     <string name="doctor_add_fragment">Add Doctor</string>
     <string name="patient_name">Patient Name</string>
@@ -32,4 +32,5 @@
     <string name="appointment_list">Appointment</string>
     <string name="doctor_list">Doctor</string>
     <string name="patient_phone">Patient Phone</string>
+    <string name="choose_a_doctor">Choose a Doctor</string>
 </resources>
