--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="time">Time</string>
     <string name="add_appointment">Add</string>
     <string name="tv_onboarding_title">RS Cepat Kembali</string>
-    <string name="tv_onboarding_subtitle">Menjaga kesehatanmu semakin mudah dengan aplikasi RS Cepat Kembali</string>
+    <string name="tv_onboarding_subtitle">It is easier to keep you up and healthy with RS Cepat Kembali app</string>
     <string name="btn_onboarding_buat_pertemuan">Make an Appointment</string>
     <string name="tv_fragment_doctor_title">Doctor List</string>
     <string name="tv_fragment_appointment_title">My Appointment</string>
